--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,93 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="108dp" />
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="8dp" />
 
-    <Button
-        android:id="@+id/useCert"
-        android:hint="Usa Certificado"
-        android:onClick="usaCert"
+    <TextView
+        android:id="@+id/textView"
+        android:hint="Chave Primaria"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="108dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="28dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:hint="Chave Secundaria"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <Button
+        android:id="@+id/xml_read"
+        android:hint="Le XML"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="148dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/createCert" />
+
+    <TextView
+        android:id="@+id/display_xml"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteX="192dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/xml_read" />
+
+    <TextView
+        android:id="@+id/display_bool"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteX="192dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/display_xml" />
+
+    <!--
+        <Button
+            android:id="@+id/assinaCert"
+            android:hint="Assina Certificado"
+            android:onClick="signCert"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/createCert"
+            app:layout_constraintBottom_toBottomOf="@id/verificaCert"
+            android:layout_marginBottom="108dp"
+            app:layout_constraintVertical_bias="0.964" />
+
+        <Button
+            android:id="@+id/verificaCert"
+            android:hint="Verifica Certificado"
+            android:onClick="vrfyCert"
+            android:layout_width="368dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="108dp" />
+    -->
 
 </android.support.constraint.ConstraintLayout>
